Build warning fixes (#75)
* Simplify Stream API
* Simplify collection creation
* Lambdas & Method refs
* Pattern variables
* Final fields
* Simplify if/else
* if/else -> switch
* isEmpty()
* Unnecessary null checks
* requireNonNullElseGet
* Diamond operator
* Boxing / unboxing
* Unnecessary StringBuilder
* Unnecessary modifier
* Unnecessary semicolon
* Visibility issues
* Static access
* Usage of raw class
* Sequenced collection